<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.fjossinet.rnartist</groupId>
    <artifactId>rnartist</artifactId>
    <version>1.0</version>

    <name>RNArtist</name>
    <url>https://github.com/fjossinet/RNArtist</url>

    <developers>
        <developer>
            <id>fjossinet</id>
            <name>Fabrice Jossinet</name>
            <email>fjossinet@gmail.com</email>
            <url>https://twitter.com/rnartist_app</url>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/fjossinet/RNArtist.git</connection>
        <developerConnection>scm:git:ssh://fjossinet/RNArtist.git</developerConnection>
        <url>https://github.com/fjossinet/RNArtist.git</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <java.version>18</java.version>
        <javafx.version>20-ea+2</javafx.version>

        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <kotlin.version>1.7.10</kotlin.version>
        <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>

        <main.class>io.github.fjossinet.rnartist.RNArtist</main.class>
        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
    </properties>

    <repositories>
        <repository>
            <id>oss-snapshots-repo</id>
            <name>Sonatype OSS Maven Repository</name>
            <url>https://oss.sonatype.org/content/groups/public</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>

        <!-- openjfx -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- NitriteDB -->
        <dependency>
            <groupId>org.dizitart</groupId>
            <artifactId>nitrite</artifactId>
            <version>3.4.4</version>
        </dependency>

        <!--controlsfx -->
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.1</version>
        </dependency>

        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
        </dependency>

        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-fontawesome5-pack</artifactId>
            <version>12.3.1</version>
        </dependency>

        <dependency>
            <groupId>org.jdesktop</groupId>
            <artifactId>swing-worker</artifactId>
            <version>1.1</version>
        </dependency>

        <dependency>
            <groupId>io.github.fjossinet.rnartist</groupId>
            <artifactId>rnartistcore</artifactId>
            <version>0.2.22-SNAPSHOT</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <!-- kotlin compiler -->
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <args>
                                <arg>-Xuse-ir</arg>
                            </args>
                            <sourceDirs>
                                <sourceDir>${project.basedir}/src/main/kotlin/</sourceDir>
                            </sourceDirs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                    <release>${java.version}</release>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <verbose>false</verbose>
                </configuration>
            </plugin>

            <!--final jar in /target/distribution -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <outputDirectory>${project.build.directory}/RNArtist/lib</outputDirectory>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>${main.class}</mainClass>
                            <useUniqueVersions>false</useUniqueVersions>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <!-- copy of runtime dependencies -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/RNArtist/lib</outputDirectory>
                            <includeScope>runtime</includeScope>
                            <excludeTransitive>false</excludeTransitive>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- copy of additional files in /target/RNArtist  -->
            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>package</phase>
                        <configuration>
                            <target>
                                <copy todir="${project.build.directory}/RNArtist/">
                                    <fileset dir="${project.basedir}/RNArtist/"/>
                                </copy>
                                <chmod dir="${project.build.directory}/RNArtist" perm="ugo+rx" includes="*.sh"/>
                                <chmod dir="${project.build.directory}/RNArtist" perm="ugo+rx" includes="*.command"/>
                                <chmod dir="${project.build.directory}/RNArtist" perm="ugo+rx" includes="*.ps1"/>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- to package app -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${exec-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>package-osx</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/jpackage</executable>
                            <arguments>
                                <argument>--type</argument>
                                <argument>dmg</argument>
                                <argument>--icon</argument>
                                <argument>${project.basedir}/src/main/resources/io/github/fjossinet/rnartist/io/images/icon.icns</argument>
                                <argument>--name</argument>
                                <argument>RNArtist</argument>
                                <argument>--main-jar</argument>
                                <argument>rnartist-1.0.jar</argument>
                                <argument>--input</argument>
                                <argument>${project.basedir}/target/RNArtist/lib/</argument>
                                <argument>--module-path</argument>
                                <argument>${project.basedir}/target/RNArtist/lib/</argument>
                                <argument>--add-modules</argument>
                                <argument>javafx.controls,javafx.swing</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>package-windows</id>
                        <!--will need the installation of the wix toolset (https://wixtoolset.org/)-->
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jpackage.exe</executable>
                            <arguments>
                                <argument>--verbose</argument>
                                <argument>--type</argument>
                                <argument>msi</argument>
                                <argument>--name</argument>
                                <argument>RNArtist</argument>
                                <argument>--main-jar</argument>
                                <argument>rnartist-1.0.jar</argument>
                                <argument>--input</argument>
                                <argument>${project.basedir}/target/RNArtist/lib/</argument>
                                <argument>--module-path</argument>
                                <argument>${project.basedir}/target/RNArtist/lib/</argument>
                                <argument>--add-modules</argument>
                                <argument>javafx.controls,javafx.swing</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>package-linux</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/jpackage</executable>
                            <arguments>
                                <argument>--type</argument>
                                <argument>deb</argument>
                                <argument>--icon</argument>
                                <argument>${project.basedir}/src/main/resources/io/github/fjossinet/rnartist/io/images/icon.png</argument>
                                <argument>--name</argument>
                                <argument>RNArtist</argument>
                                <argument>--main-jar</argument>
                                <argument>rnartist-1.0.jar</argument>
                                <argument>--input</argument>
                                <argument>${project.basedir}/target/RNArtist/lib/</argument>
                                <argument>--module-path</argument>
                                <argument>${project.basedir}/target/RNArtist/lib/</argument>
                                <argument>--add-modules</argument>
                                <argument>javafx.controls,javafx.swing</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- to run RNArtist -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${exec-maven-plugin.version}</version>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <argument>-Xms500M</argument>
                        <argument>-Xmx500M</argument>
                        <argument>--module-path</argument>
                        <argument>${project.basedir}/target/RNArtist/lib</argument>
                        <argument>--add-modules=javafx.controls,javafx.swing</argument>
                        <argument>-Dprism.lcdtext=false</argument> <!--anti-aliasing to avoid to have scratched fonts-->
                        <argument>-jar</argument>
                        <argument>${project.basedir}/target/RNArtist/lib/rnartist-1.0.jar</argument>
                    </arguments>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
